--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
 		<link type="text/css" rel="stylesheet" href="admin.css"/>
 		<script src="ajax_function.js" type="text/javascript"></script>
 		<script language="JavaScript">
-			//hotfix version
+			//hotfix version1
 			var myReq= getRequest();
 			
 			function onLoginButtonClick(i){
