--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,7 @@
 		<script src="ajax_function.js" type="text/javascript"></script>
 		<script language="JavaScript">
 			//testing
+			//testing2
 			var myReq= getRequest();
 			
 			function onLoginButtonClick(i){
