--- a/admin_addnotice.html
+++ b/admin_addnotice.html
@@ -6,6 +6,7 @@
 	<title>새 공지 작성</title>
 	<link type="text/css" rel="stylesheet" href="admin.css"/>
 	<script language="JavaScript">
+		//testing
 		function apply(){
 			alert("공지가 적용되었습니다");
 			window.close();			
